--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <a href="https://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
               <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="files/CV - Daniel Essel (1).pdf" download class="btn btn2">Download CV</a>
+            <a href="#" download class="btn btn2">Download CV</a>
           </div>
           <div class="contact-right">
             <form>
