--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </ul>
         </nav>
         <div class="header-text">
-          <p>UI/UX Desoigner</p>
-          <h1>Hello, I'm <span>Daniel</span><br />Essel From Ghana</h1>
+          <p>Web Developer, Teacher And Entrepreneur</p>
+          <h1>Hello World!, I'm <span>Daniel</span><br />Essel From Ghana</h1>
         </div>
       </div>
     </div>
@@ -41,10 +41,19 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero
-              error facere omnis repellat neque animi autem eaque laboriosam
-              minus recusandae molestiae ipsa asperiores ut tempora temporibus,
-              repellendus eligendi fuga voluptatibus.
+              I am a junior web developer, professional educator, entrepreneur,
+              and IT expert. In addition to these roles, I possess strong soft
+              skills in leadership, administration, and management, which enable
+              me to work effectively both independently and as part of a team.
+            </p>
+            <br />
+            <p>
+              My diverse experience spans various fields, including education,
+              technology, and agriculture. I am eager to embrace new
+              opportunities that will enhance my skills while making a positive
+              impact on individuals and organizations. I look forward to
+              contributing my expertise and continuing to grow in my
+              professional journey.
             </p>
             <div class="tab-titles">
               <p class="tab-links active-links" onclick="opentab('skills')">
@@ -57,11 +66,11 @@
             </div>
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li><span>UI/UX</span><br />Desiging Web/App Interfaces</li>
                 <li><span>Web Development</span><br />Website Building</li>
+                <li><span>Education</span><br />Teach anything teachable</li>
                 <li>
-                  <span>App Development</span><br />Building Andriod Apps/iOS
-                  Apps
+                  <span>Entrepreneurship</span><br />Large Scale Cassava and
+                  Maize Farming
                 </li>
               </ul>
             </div>
@@ -101,32 +110,29 @@
     <!-- ----------------------------Services--------------- -->
     <div id="services">
       <div class="container">
-        <h1 class="sub-title">My Services</h1>
+        <h1 class="sub-title">My Services & Products</h1>
         <div class="services-list">
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Web Designs</h2>
+            <h2>Web Development</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-              ataskmadm.
+              For all your websites and Apps needs, I've got you sorted.I develop and maintain websites/apps.
             </p>
             <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-sharp fa-solid fa-crop"></i>
-            <h2>UI/UX Design</h2>
+            <h2>Education</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-              ataskmadm.
+             I have specialization in teaching technical related courses
             </p>
             <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-app-store"></i>
-            <h2>App Design</h2>
+            <h2>Entrepreneurship</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-              ataskmadm.
+              I am into large scal cassava and maize farmming.
             </p>
             <a href="#">Learn more</a>
           </div>
@@ -139,62 +145,111 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="images/social-app.jpg">
+            <img src="images/social-app.jpg" />
             <div class="layer">
-              <h3>Social Media App</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-              <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+              <h3>Web Development</h3>
+              <p>experience the best and finest app and websites from de.</p>
+              <a href="#"
+                ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
           <div class="work">
-            <img src="images/music-app.jpg">
+            <img src="images/education.jpg" />
             <div class="layer">
-              <h3>Music App App</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-              <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+              <h3>Education</h3>
+              <p>Your trust educator for achieving greater hights.</p>
+              <a href="#"
+                ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
           <div class="work">
-            <img src="images/shopping-app.jpg">
+            <img src="images/farming.jpg" />
             <div class="layer">
-              <h3>Online Shopping Apps</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-              <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+              <h3>Farm Produce</h3>
+              <p>I cultivate and sell fresh/dry maize.</p>
+              <a href="#"
+                ><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
         </div>
       </div>
       <a href="#" class="btn">See more</a>
     </div>
+    <!-- ------------------------Awards--------------- -->
+    <div id="awards">
+      <div class="container">
+        <h1 class="sub-title">My Awards & Certificates</h1>
+        <div class="award-list">
+          <div>
+           <img src="images/forage Cert.jpg" class="img-1">
+          </div>
+          <div>
+            <img src="images/ibmbage.jpg" alt="">
+          </div>
+          <div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- ------------------Contact--------------- -->
-     <div id="contact">
+    <div id="contact">
       <div class="container">
         <div class="row">
           <div class="contact-left">
             <h1 class="sub-title">Contact Me</h1>
-            <p class=""> <i class="fa-solid fa-paper-plane"></i>dessel731@outlook.com</p>
-            <p><i class="fa-duotone fa-solid fa-phone"></i> (+233) 0245258015 / 0542480731</p>
+            <p class="">
+              <i class="fa-solid fa-paper-plane"></i>dessel731@outlook.com
+            </p>
+            <p>
+              <i class="fa-duotone fa-solid fa-phone"></i> (+233) 0245258015 /
+              0542480731
+            </p>
             <div class="social-icons">
-              <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://facebook.com"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
               <a href="https://x.com"><i class="fa-solid fa-x"></i></a>
-              <a href="https://tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
-              <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://tiktok.com"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a href="https://instagram.com"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </div>
             <a href="#" download class="btn btn2">Download CV</a>
           </div>
           <div class="contact-right">
             <form>
-              <input type="text" name="Name" placeholder="Your Name" required>
-              <input type="email" name="email" id="Enter Your Email" placeholder="Your Email" required>
-              <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="email"
+                id="Enter Your Email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
               <button type="submit" class="btn btn2">submit</button>
             </form>
           </div>
         </div>
       </div>
+      <!-- ------------------------Awards and Cert------------------- -->
+
       <div class="copyright">
-        <p>Copyright © DE. Made with <i class="fa-solid fa-heart"></i> by Essel's Tutorial</p>
+        <p>
+          Copyright © DE. Made with <i class="fa-solid fa-heart"></i> by Essel's
+          Tutorial
+        </p>
       </div>
-     </div>
+    </div>
   </body>
 </html>
