--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Service</a></li>
             <li><a href="#">Works</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -82,7 +82,7 @@
     <!-- ----------------------------Services--------------- -->
     <div id="services">
       <div class="container">
-        <h1 class="sub-title">My Services & Products</h1>
+        <h1 class="sub-title">My Services</h1>
         <div class="services-list">
           <div>
             <i class="fa-solid fa-code"></i>
