--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Works</a></li>
+            <li><a href="#">Awards</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
