--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <div class="header-text">
-          <p>Web Developer, Teacher And Entrepreneur</p>
+          <p>junior Web Developer, Teacher And Entrepreneur</p>
           <h1>Hello World!, I'm <span>Daniel</span><br />Essel From Ghana</h1>
         </div>
       </div>
