--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/0bcc212ea4.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="about.html">
   </head>
   <body>
     <!-- ----------------Header----------- -->
@@ -18,8 +19,8 @@
         <nav>
           <img src="images/logo.png" class="logo" />
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Works</a></li>
             <li><a href="#">Awards</a></li>
